# qimu

./: PROJECT.md  README.md  pyproject.toml
qimu/: __init__.py  cli.py
qimu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
qimu/commands/: __init__.py  config.py  reads_table.py  version.py
qimu/utils/: __init__.py  config_handler.py  logger.py  reads_paths.py
tests/: __init__.py  test_config.py  test_reads_table.py  test_version.py
